# gf-sokoban

./: .gitignore  README.md  advanced.adoc  analysis.adoc  beginner.adoc  index.adoc  intermediate.adoc  update-tutorial.sh
01-beginner/: CMakeLists.txt
01-beginner/code/: sokoban01.cc  template01.cc
02-intermediate/: CMakeLists.txt
02-intermediate/code/: config.h.in  sokoban02.cc  template02.cc
02-intermediate/code/bits/: Boxes.cc  Boxes.h  Data.cc  Data.h  Hero.cc  Hero.h  Level.cc  Level.h
